shm: Updated the build system to work with Yocto
Trigger ipc-shm module build from the sample Makefile

Issue: IPCF-152
Signed-off-by: Victor Cernatescu <victor.cernatescu@nxp.com>

--- a/ipc-shm-dev/Makefile
+++ b/ipc-shm-dev/Makefile
@@ -3,13 +3,31 @@
 # Copyright (C) 2018 NXP Semiconductors
 #
 
-obj-m := ipc-shm.o
 PWD := $(shell pwd)
 
+ifneq ($(KERNELRELEASE),)
+# kbuild part of makefile
+obj-m := ipc-shm.o
+# Add here cc flags (e.g. header lookup paths, defines, etc)
+ccflags-y +=
+else
+ARCH ?= arm64
+
+# The following parameters must be passed from the caller,
+# e.g. build system (Yocto), command line:
+# KERNELDIR    : Linux kernel source code location
+# INSTALL_DIR  : location of the module installation
+# CROSS_COMPILE: the path and prefix of the used cross compiler
+
 modules:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) $@
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $@
+
+modules_install: modules
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) INSTALL_MOD_PATH=$(INSTALL_DIR) $@
 
 clean:
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) $@
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $@
 
 .PHONY: modules clean
+
+endif
