shm: Add IPC SHM dev API
Issue: IPCF-150
Signed-off-by: Valentin Ciocoi-radulescu <valentin.ciocoi@nxp.com>

--- a/ipc-shm-dev/Makefile
+++ b/ipc-shm-dev/Makefile
@@ -6,10 +6,10 @@
 obj-m := ipc-shm.o
 PWD := $(shell pwd)
 
-kbuild:
-	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules
+modules:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) $@
 
 clean:
-	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) clean
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) $@
 
-.PHONY: kbuild clean
+.PHONY: modules clean
