shm: implement shm dev init/free api
Issue: IPCF-160
Signed-off-by: Valentin Ciocoi-radulescu <valentin.ciocoi@nxp.com>

--- a/ipc-shm-dev/Makefile
+++ b/ipc-shm-dev/Makefile
@@ -7,9 +7,11 @@ PWD := $(shell pwd)
 
 ifneq ($(KERNELRELEASE),)
 # kbuild part of makefile
-obj-m := ipc-shm.o
+obj-m := ipc-shm-dev.o
+ipc-shm-dev-y := ipc-shm.o ipc-fifo.o
 # Add here cc flags (e.g. header lookup paths, defines, etc)
 ccflags-y +=
+
 else
 ARCH ?= arm64
 
