--- a/ipc-shm-sample/Makefile
+++ b/ipc-shm-sample/Makefile
@@ -11,21 +11,22 @@ ifneq ($(KERNELRELEASE),)
 obj-m := ipc-shm-sample.o
 # Add here cc flags (e.g. header lookup paths, defines, etc)
 ccflags-y +=
+
 else
 ARCH ?= arm64
 
-# additional module symbols dependancy
-export KBUILD_EXTRA_SYMBOLS=${IPC_SHM_DEV_ROOT}/Module.symvers
+# additional module symbols dependency
+EXTRA_SYMBOLS=${IPC_SHM_DEV_ROOT}/Module.symvers
 
 # The following parameters must be passed from the caller,
 # e.g. build system (Yocto), command line:
 # KERNELDIR    : Linux kernel source code location
 # INSTALL_DIR  : location of the module installation
-# CROSS_COMPILE: the path and prefix of the used cross compiler
+# CROSS_COMPILE: cross compiler path and prefix
 
 modules:
 	$(MAKE) -C $(IPC_SHM_DEV_ROOT) KERNELDIR=$(KERNELDIR) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $@
-	$(MAKE) -C $(KERNELDIR) M=$(PWD) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $@
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) KBUILD_EXTRA_SYMBOLS=$(EXTRA_SYMBOLS) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $@
 
 modules_install: modules
 	$(MAKE) -C $(IPC_SHM_DEV_ROOT) KERNELDIR=$(KERNELDIR) INSTALL_MOD_PATH="$(INSTALL_DIR)" $@
