--- a/ipc-shm-dev/Makefile
+++ b/ipc-shm-dev/Makefile
@@ -8,7 +8,7 @@ PWD := $(shell pwd)
 ifneq ($(KERNELRELEASE),)
 # kbuild part of makefile
 obj-m := ipc-shm-dev.o
-ipc-shm-dev-y := ipc-shm.o ipc-fifo.o
+ipc-shm-dev-y := ipc-mod.o ipc-shm.o ipc-fifo.o
 
 ifeq ($(CONFIG_SOC_S32GEN1),y)
 ipc-shm-dev-y += ipc-hw-s32gen1.o
