shm: add support for s32g3xx
Issue: IPCF-1450
Signed-off-by: Costin Viorel Olaru <costin-viorel.olaru@nxp.com>

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -4,6 +4,7 @@
 #
 
 MODULE_NAME := ipc-shm-sample
+PLATFORM_FLAVOR ?= s32g2
 
 ifneq ($(KERNELRELEASE),)
 # kbuild part of makefile
@@ -14,6 +15,15 @@ $(MODULE_NAME)-y := sample.o
 POLLING ?= no
 ifeq ($(POLLING),yes)
 ccflags-y += -DPOLLING
+endif
+
+ifeq ($(CONFIG_SOC_S32GEN1),y)
+ifeq ($(PLATFORM_FLAVOR),s32g2)
+ccflags-y += -DPLATFORM_FLAVOR_s32g2
+endif
+ifeq ($(PLATFORM_FLAVOR),s32g3)
+ccflags-y += -DPLATFORM_FLAVOR_s32g3
+endif
 endif
 
 # Add here cc flags (e.g. header lookup paths, defines, etc)
@@ -34,6 +44,7 @@ EXTRA_SYMBOLS=${IPC_SHM_DEV_PATH}/Module.symvers
 # KERNELDIR    : Linux kernel source code location
 # INSTALL_DIR  : location of the module installation
 # CROSS_COMPILE: cross compiler path and prefix
+# PLATFORM_FLAVOR: build for s32g2 or s32g3
 # Optional parameters:
 # POLLING      : set yo 'yes' to disable tx interrupt if
 #                remote sample application use polling
