fixes for changes in BSP35
Issue: IPCF-2217

Signed-off-by: Costin Viorel Olaru <costin-viorel.olaru@nxp.com>

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -4,7 +4,7 @@
 #
 
 MODULE_NAME := ipc-shm-sample
-PLATFORM_FLAVOR ?= s32g2
+PLATFORM_FLAVOR ?= UNDEFINED
 
 ifneq ($(KERNELRELEASE),)
 # kbuild part of makefile
