Init value when using same irq in kernel space
- Init value before check for same irq in kernel space
- Add polling to sample_multi_instance

Issue: IPCF-3776

Signed-off-by: Hoang Nguyen <hoang.nguyenle@nxp.com>

--- a/sample_multi_instance_user/Makefile
+++ b/sample_multi_instance_user/Makefile
@@ -12,7 +12,7 @@ MAKEFLAGS += --warn-undefined-variables
 EXTRA_CFLAGS ?=
 EXTRA_LDFLAGS ?=
 .DEFAULT_GOAL := all
-IPCF_OS ?= UIO
+IPCF_OS ?= uio
 
 ifeq ($(CROSS_COMPILE),)
 $(error CROSS_COMPILE is not set!)
@@ -24,7 +24,7 @@ ifeq ($(filter-out $(PLATFORM_FLAVOR),$(PLATFORM_FLAVOR_LIST)),$(PLATFORM_FLAVOR
 endif
 IPCF_OS_LIST := uio cdev
 ifeq ($(filter-out $(IPCF_OS),$(IPCF_OS_LIST)),$(IPCF_OS_LIST))
-    $(error Set PLATFORM_FLAVOR variable to a supported platform: '$(IPCF_OS_LIST)')
+    $(error Set IPCF_OS variable to a supported platform: '$(IPCF_OS_LIST)')
 endif
 
 ifeq ($(PLATFORM_FLAVOR),s32g2)
